Fix margines on mobile

--- a/task_05/css/style.css
+++ b/task_05/css/style.css
@@ -508,9 +508,11 @@ section {
 
 .l-row {
   text-align: center; }
-  @media only screen and (min-width: 768px) {
-    .l-row__item {
-      padding: 0 1.5rem; } }
+  .l-row__item {
+    margin-bottom: 20px; }
+    @media only screen and (min-width: 768px) {
+      .l-row__item {
+        padding: 0 1.5rem; } }
   @media only screen and (min-width: 768px) {
     .l-row {
       display: flex; } }
@@ -670,7 +672,8 @@ section {
   font-style: italic; }
 
 .footer {
-  padding-top: 40px; }
+  padding-top: 50px;
+  padding-bottom: 0; }
   .footer__copyright {
     padding-top: 20px;
     margin-top: 30px;
@@ -785,7 +788,6 @@ section {
 
 .map {
   height: 30rem;
-  margin-top: 10rem;
   background-image: url(../img/map/bg-map.jpg);
   position: relative;
   background-size: cover;
