--- a/task_05/sass/layout/_footer.scss
+++ b/task_05/sass/layout/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
-  padding-top: 40px;
+  padding-top: 50px;
+  padding-bottom: 0;
   &__copyright {
     padding-top: 20px;
     margin-top: 30px;
