--- a/task_05/sass/layout/_l-row.scss
+++ b/task_05/sass/layout/_l-row.scss
@@ -1,6 +1,7 @@
 .l-row {
   text-align: center;
   &__item {
+    margin-bottom: 20px;
     @include m-query(md) {
       padding: $primary-item-padding;
     }
